// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Flash/> renders <Flash /> component 1`] = `
<Styled(Alert)
  variant="danger"
>
  <MarkdownRenderer
    markdown="Error"
  />
  <Button
    active={false}
    className="close"
    disabled={false}
    onClick={[MockFunction]}
    type="button"
    variant="primary"
  >
    <FontAwesome
      name="times"
    />
  </Button>
</Styled(Alert)>
`;

exports[`<Flash/> updates via props 1`] = `
<Styled(Alert)
  variant="success"
>
  <MarkdownRenderer
    markdown="Success"
  />
  <Button
    active={false}
    className="close"
    disabled={false}
    onClick={[MockFunction]}
    type="button"
    variant="primary"
  >
    <FontAwesome
      name="times"
    />
  </Button>
</Styled(Alert)>
`;
